# ai-race-sim

./: CMakeLists.txt  README.md
gazebo/: CMakeLists.txt
gazebo/models/D435i/: model.config  model.sdf
gazebo/models/D435i/meshes/: D415.dae
gazebo/models/Racetrack/: model.config  model.sdf
gazebo/models/Racetrack/meshes/: Racetrack.dae
gazebo/models/TrafficCone/: model.config  model.sdf
gazebo/models/TrafficCone/meshes/: TrafficCone.dae
gazebo/models/rccar/: model.config  model.sdf
gazebo/models/rccar/meshes/: BackLeftWheel.dae  BackRightWheel.dae  FrontLeftWheel.dae  FrontRightWheel.dae
gazebo/plugins/: CMakeLists.txt  d435i_color_plugin.cc  d435i_color_plugin.h  d435i_depth_plugin.cc  d435i_depth_plugin.h  gz_core.cc  gz_core.h  gz_core.py  gz_d435i.cc  gz_d435i.h  gz_d435i.py  gz_plugin.h  gz_rccar.cc  gz_rccar.h  gz_rccar.py  log.h  rccar_plugin.cc  rccar_plugin.h
gazebo/resources/: racetrack.world
python/: env_racetrack.py  test-env.py  util.py
